Closed
Bug 1173212
Opened 11 years ago
Closed 11 years ago
PLDHashTable::Iterator is busted in chaos mode
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla41
| Tracking | Status | |
|---|---|---|
| firefox41 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: n.nethercote)
References
Details
Attachments
(2 files, 1 obsolete file)
|
2.84 KB,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
|
2.25 KB,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
I've started converting some PL_DHashTableEnumerate() calls to PLDHashTable::Iterator usages, because the iterator is much nicer. But a try push has revealed that the iterator is broken in chaos mode.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8617688 -
Flags: review?(nfroyd)
| Assignee | ||
Updated•11 years ago
|
Blocks: modernize-pldhash
| Assignee | ||
Comment 2•11 years ago
|
||
This fixes the crashes I was getting on some mochitests with other patches that
used PLDHashTable::Iterator.
Attachment #8617691 -
Flags: review?(nfroyd)
| Assignee | ||
Comment 3•11 years ago
|
||
I changed my mind, because a couple of the local variables were debug-only for
the asserts. They're vacuous asserts, let's just get rid of them.
Attachment #8617705 -
Flags: review?(nfroyd)
| Assignee | ||
Updated•11 years ago
|
Attachment #8617688 -
Attachment is obsolete: true
Attachment #8617688 -
Flags: review?(nfroyd)
Updated•11 years ago
|
Attachment #8617705 -
Flags: review?(nfroyd) → review+
Comment 4•11 years ago
|
||
Comment on attachment 8617691 [details] [diff] [review]
(part 2) - Make PLDHashTable::Iterator work in chaos mode
Review of attachment 8617691 [details] [diff] [review]:
-----------------------------------------------------------------
Nice catch.
Attachment #8617691 -
Flags: review?(nfroyd) → review+
https://hg.mozilla.org/mozilla-central/rev/e14d67e27eab
https://hg.mozilla.org/mozilla-central/rev/830bf11bfe1d
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•