Bug 1173212 (part 1) - Remove some can't-fail tests in PLDHashTable. r=froydnj.